--- a/index.html
+++ b/index.html
@@ -4,14 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
     <script src="script.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="cabeca">
-        <h1>Super Intendent</h1>
-        <img src="/assets/img/R.png" width="50" height="30">
+    <header class="cabecario">
+        <nav class="Explorar">
+            <a href="BotaoExplorar"><button class="botaoexplorar">Explorar</button></a>
+        </nav>
+        <div class="logo">
+            <img src="/assets/img/R.png">
+        </div>
+        <span class="superintendent">Super Intendent</span>
     </header>
-    
 </body>
 </html>
