--- a/index.html
+++ b/index.html
@@ -9,14 +9,35 @@
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="cabecario">
-        <nav class="Explorar">
-            <a href="BotaoExplorar"><button class="botaoexplorar">Explorar</button></a>
+    <header class="header">
+        <nav class="explore">
+            <a href="BotaoExplorar"><button class="explore-button">Explorar</button></a>
         </nav>
-        <div class="logo">
-            <img src="/assets/img/R.png">
+        <div class="search-container">
+            <input type="text" placeholder="Buscar por..." class="search-input">
+            <button class="search-button"></button>
         </div>
-        <span class="superintendent">Super Intendent</span>
+        <div class="center-content">
+            <div class="logo-container">
+                <img src="/assets/img/logo.png.png">
+                <div class="Fernweh">Fernweh</div>
+            </div>
+        </div>
+        <div class="account-container">
+            <a href="#">Sua conta</a>
+        </div>
     </header>
+    
+    <main>
+
+
+
+
+
+
+
+
+    </main>
 </body>
+
 </html>
